--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.13",
     "tempy": "^3.1.0",
     "unicode-match-property-value-ecmascript": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build:css": "tailwindcss -i ./src/App.css -o ./src/output.css --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
