--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "cross-spawn": "^7.0.3",
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.10",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
