Add Custom 404 Page

--- a/firebase.json
+++ b/firebase.json
@@ -5,10 +5,17 @@
   },
   "hosting": {
     "public": "build",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "errorPage": "/404.html"
   }
 }
